[package]
name = "nettu_scheduler_api"
version = "0.1.0"
authors = ["Fredrik Meringdal"]
edition = "2021"

[dependencies]
nettu_scheduler_api_structs = { path = "../api_structs" }
nettu_scheduler_domain = { path = "../domain" }
nettu_scheduler_infra = { path = "../infra" }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
actix-web = "4"
actix-cors = "0.7"
awc = "3"
async-trait = "0.1"
rrule = "0.13"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1.0"
jsonwebtoken = "9"
thiserror = "1.0"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-futures = "0.2"

[dev-dependencies]
serial_test = "*"
