[package]
name = "nettu_scheduler_api_structs"
version = "0.3.1"
description = "Nettu scheduler api types"
license = "MIT"
authors = ["Fredrik Meringdal"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nettu_scheduler_domain = { path = "../domain", version = "0.2.1" }
