[package]
name = "nettu_scheduler_domain"
version = "0.2.1"
description = "Nettu scheduler domain"
license = "MIT"
authors = ["Fredrik Meringdal"]
edition = "2021"

[dependencies]
nettu_scheduler_utils = { path = "../utils", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
rrule = "0.13"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
anyhow = "1.0"
url = "2"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
thiserror = "1.0"
itertools = "0.14"
rand = "0.9"
